# Routecord

./: LICENSE  README.md
dnotify/: Cargo.toml
dnotify/src/: client.rs  client_linux.rs  client_windows.rs  main.rs
routecord/: Cargo.toml
routecord/src/: config.rs  main.rs  utils.rs
routecord/src/features/: mod.rs
routecord/src/features/all/: rpc.rs
routecord/src/features/linux/: discord_client.rs
routecord/src/features/windows/: discord_client.rs
