[package]
name = "dnotify"
description = "Discord selfbot program to send notifications for messages."
version = "1.0.1"
authors = [ "vars1ty <gh@resistant.ch>" ]
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = "0.12.26"
dashmap = "6.1.0"
image = "0.25.9"

[dependencies]
serenity = { git = "https://github.com/vars1ty/serenity.git" }
notify-rust = { version = "4.11.7", features = [ "images" ] }
tokio = { version = "1.48.0", features = ["macros"] }

[profile.release]
incremental = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
